--- a/Athlete_Connect/01 - telas principais/00 - favoritos/favoritos.html
+++ b/Athlete_Connect/01 - telas principais/00 - favoritos/favoritos.html
@@ -15,17 +15,19 @@
     <main>
       <header class="header">
         <div class="logo">
-          <img
-            class="boneco"
-            src="https://i.ibb.co/g9rGQxK/boneco.png"
-            alt="boneco"
-            border="0"
-          />
-          <span>Athlete Connect</span>
+          <a href="../01 - para voce/paraVoce.html">
+            <img
+              class="boneco"
+              src="https://i.ibb.co/g9rGQxK/boneco.png"
+              alt="boneco"
+              border="0"
+            />
+          </a>
+            <span>Athlete Connect</span>
         </div>
         <div class="tabs">
-          <a href="../01 - para voce/index.html" class="tab">Para você</a>
-          <a href="#" class="tab active">Favoritos</a>
+          <a href="../01 - para voce/paraVoce.html" class="tab">Para você</a>
+          <a href="../00 - favoritos/favoritos.html" class="tab active">Favoritos</a>
         </div>
       </header>
 
