--- a/Athlete_Connect/01 - telas principais/01 - para voce/paraVoce.html
+++ b/Athlete_Connect/01 - telas principais/01 - para voce/paraVoce.html
@@ -10,17 +10,19 @@
     <main>
       <header class="header">
         <div class="logo">
+          <a href="./paraVoce.html">
           <img
             class="boneco"
             src="https://i.ibb.co/g9rGQxK/boneco.png"
             alt="boneco"
             border="0"
           />
+        </a>
           <span>Athlete Connect</span>
         </div>
         <div class="tabs">
-          <a href="./index.html" class="tab active">Para você</a>
-          <a href="../00 - favoritos/index.html" class="tab">Favoritos</a>
+          <a href="./paraVoce.html" class="tab active">Para você</a>
+          <a href="../00 - favoritos/favoritos.html" class="tab">Favoritos</a>
         </div>
       </header>
 
