--- a/Athlete_Connect/05 - doacoes/doacaoRealizada.html
+++ b/Athlete_Connect/05 - doacoes/doacaoRealizada.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doação Realizada</title>
     <link
-  rel="icon"
-  href="../images/Athlete_Connect Icon.png"
-  type="image/x-icon"
-/>
-</head>
-<body>
-    
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <a href="../01 - telas principais/00 - favoritos/index.html">
-    <div>
-        <img src="../images/BackSymbol.svg" alt="">
+      <div>
+        <img src="../images/BackSymbol.svg" alt="" />
+      </div>
+    </a>
+
+    <div class="logo">
+      <img src="../images/Athlete_Connect Icon.png" alt="" />
     </div>
-</a>
 
-<div>
-    <img src="../images/Athlete_Connect Icon.png" alt="">
-
-</div>
-
-
-<div>
-
-    <img src="../images/CheckCircle.png" alt="">
-</div>
-
-<div>
-    <h1>Doação Realizada!</h1>
-</div>
-
-
-</body>
+    <div class="check">
+      <img src="../images/CheckCircle.png" alt="" />
+    </div>
+    <div style="text-align: center;">
+      <h1>Doação Realizada!</h1>
+    </div>
+  </body>
 </html>
