--- a/Athlete_Connect/04 - perfil/compartilharPerfil.html
+++ b/Athlete_Connect/04 - perfil/compartilharPerfil.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Compartilhar Perfil</title>
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
-</head>
-<body>
-
-<a href="../01 - telas principais/00 - favoritos/index.html">
-
-<div>
-<img src="../images/BackSymbol.svg" alt="Voltar para a Home">
-</div>
-</a>
-
-
-<h1>Compartilhe seu perfil</h1>
-
-<img src="../images/QR Code.png" alt="QR code de perfil">
-
-</body>
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <a href="../01 - telas principais/00 - favoritos/index.html">
+      <div>
+        <img src="../images/BackSymbol.svg" alt="Voltar para a Home" />
+      </div>
+    </a>
+  <div class="search ">
+    <h1>Compartilhe seu</h1>
+  <h1 style="color:#03af50 ;">perfil</h1>
+    <img src="../images/QR Code.png" alt="QR code de perfil" />
+  </div>
+  </body>
 </html>
