--- a/Athlete_Connect/01 - telas principais/00 - favoritos/favoritos.html
+++ b/Athlete_Connect/01 - telas principais/00 - favoritos/favoritos.html
@@ -558,24 +558,24 @@
             border="0"
           />
         </button>
-        <a href="#" class="nav-item">
+        <a href="../01 - para voce/paraVoce.html" class="nav-item">
           <img
             src="https://i.ibb.co/4pT63Cm/home-Verde.png"
             alt="homeVerde"
             border="0"
           />
         </a>
-        <a href="#" class="nav-item">
+        <a href="../../01 - telas principais/02 - search/perfis.html" class="nav-item">
           <img
             src="https://i.ibb.co/3k6pWKF/search.png"
             alt="search"
             border="0"
           />
         </a>
-        <a href="#" class="nav-item">
+        <a href="../../02 - chat/group.html" class="nav-item">
           <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
         </a>
-        <a href="#" class="nav-item">
+        <a href="../../04 - perfil/perfil.html" class="nav-item">
           <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
         </a>
       </div>
