Construção final do chat

--- a/Athlete_Connect/02 - chat/chatPv.html
+++ b/Athlete_Connect/02 - chat/chatPv.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><img src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ=" alt="">
+  <header>
+    <a href="group.html">
+      <div>
+        <img src="../images/BackSymbol.svg" alt="" />
+      </div>
+    </a>
+    <img src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ=" alt="">
     <h3>João Henrique</h3>
   </header>  
    
