--- a/Athlete_Connect/02 - chat/group.html
+++ b/Athlete_Connect/02 - chat/group.html
@@ -31,7 +31,7 @@
           />
 
           <div class="msgarea">
-            <a href="./chatPv.html" class="profileName">Ninja Bodybuilder</a>
+            <a href="#" class="profileName">Ninja Bodybuilder</a>
             <p>eai mano</p>
           </div>
         </div>
@@ -42,7 +42,7 @@
           />
 
           <div class="msgarea">
-            <a href="./chatPv.html" class="profileName">Marta</a>
+            <a href="#" class="profileName">Marta</a>
             <p>eai mano</p>
           </div>
         </div>
@@ -53,7 +53,7 @@
           />
 
           <div class="msgarea">
-            <a href="./chatPv.html" class="profileName">Nike</a>
+            <a href="#" class="profileName">Nike</a>
             <p>eai mano</p>
           </div>
         </div>
@@ -64,7 +64,7 @@
           />
 
           <div class="msgarea">
-            <a href="./chatPv.html" class="profileName">Jorlan Vieira</a>
+            <a href="./chatPv.html" class="profileName">João Henrique</a>
             <p>eai mano</p>
           </div>
         </div>
@@ -75,7 +75,7 @@
           />
 
           <div class="msgarea">
-            <a href="./chatPv.html" class="profileName">ViniJR</a>
+            <a href="#" class="profileName">ViniJR</a>
             <p>eai mano</p>
           </div>
         </div>
@@ -85,7 +85,7 @@
             alt="ninja"
           />
           <div class="msgarea">
-            <a href="./chatPv.html" class="profileName">Daniel Dias</a>
+            <a href="#" class="profileName">Daniel Dias</a>
             <p>eai mano</p>
           </div>
         </div>
