--- a/Athlete_Connect/02 - chat/group.html
+++ b/Athlete_Connect/02 - chat/group.html
@@ -70,7 +70,7 @@
         </div>
         <div class="profileSearch">
           <img
-            src="https://ds-images.bolavip.com/news/image/740/416/?src=https://images.somosfanaticos.fans/webp/br/full/SFBR_20241015_SFBR_418439_Comitiva-de-Vinicius-Junior-se-reune-com-novo-clube-e-saida-do-Real-Madrid-ganha-forca-scaled-e1728996982995.webp"
+            src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ="
             alt="ninja"
           />
 
