--- a/Athlete_Connect/02 - chat/group.html
+++ b/Athlete_Connect/02 - chat/group.html
@@ -59,8 +59,8 @@
         </div>
         <div class="profileSearch">
           <img
-            src="https://www.acritica.com/image/policy:1.348540.1723811891:1723811891/image.jpg?f=default&w=1200"
-            alt="ninja"
+            src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ="
+            alt="João Henrique"
           />
 
           <div class="msgarea">
@@ -70,7 +70,7 @@
         </div>
         <div class="profileSearch">
           <img
-            src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ="
+            src="https://ds-images.bolavip.com/news/image/740/416/?src=https://images.somosfanaticos.fans/webp/br/full/SFBR_20241015_SFBR_418439_Comitiva-de-Vinicius-Junior-se-reune-com-novo-clube-e-saida-do-Real-Madrid-ganha-forca-scaled-e1728996982995.webp"
             alt="ninja"
           />
 
