--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
@@ -21,11 +21,11 @@
           border="0"
         />
       </section>
-
+<form action="./login.html">
       <section class="forms">
-        <input type="text" placeholder="Nome Completo" />
-        <input type="text" placeholder="CEP" />
-        <input type="text" placeholder="Numero de Telefone" />
+        <input type="text" placeholder="Nome Completo" required/>
+        <input type="text" placeholder="CEP" required/>
+        <input type="text" placeholder="Numero de Telefone" required/>
 
       </section>
    
@@ -36,10 +36,11 @@
       </section>
 
       <div class="submitbutton">
-        <a href="./login.html">
-          <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
-        </a>
+        
+          <button class="botaoPrincipal" type="submit">CRIAR CONTA</button>
+        
       </div>
+    </form>
     </main>
 
     <script></script>
