--- a/Athlete_Connect/00 - cadastro_login/01 - login/login.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/login.html
@@ -22,7 +22,7 @@
         />
         <h1>Login</h1>
       </section>
-
+<form action="../../01 - telas principais/01 - para voce/paraVoce.html">
       <section class="forms">
         <input type="text" placeholder="CPF/CNPJ" required/>
         <input type="password" placeholder="Senha" required/>
@@ -45,12 +45,12 @@
       </div>
 
       <div class="submitbutton">
-        <a href="../../01 - telas principais/01 - para voce/paraVoce.html">
-          <button class="botaoPrincipal" type="button">AVANÇAR</button>
+        
+          <button class="botaoPrincipal" type="submit">AVANÇAR</button>
 
-        </a>
       </div>
       
+    </form>
 
       <section class="loginpage">
         <p>Não possui uma conta?</p>
@@ -58,6 +58,6 @@
       </section>
     </main>
 
-    <script src="./assets/script.js"></script>
+    <script ></script>
   </body>
 </html>
