--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
@@ -31,7 +31,8 @@
         <h1>Bem vindo,</h1>
         <h1 class="titleGreen">Atleta</h1>
       </section>
-
+      
+<form action="./login.html">
       <section class="forms">
         <input type="text" placeholder="CPF/CNPJ" required/>
         <input type="email" placeholder="Email" required/>
@@ -48,10 +49,10 @@
       </section>
 
       <div class="submitbutton">
-        <a href="./login.html">
-          <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
-        </a>
-      </div>
+          <button class="botaoPrincipal" type="submit">CRIAR CONTA</button>
+          
+    </div>
+      </form>
     </main>
 
     <script></script>
