--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg.html
@@ -31,7 +31,7 @@
         <h1>Registre uma</h1>
         <h1 class="titleGreen">Organização</h1>
       </section>
-
+<form action="./cadastroOrg2.html">
       <section class="forms">
         <input type="text" placeholder="CPF/CNPJ" required/>
         <input type="email" placeholder="Email" required/>
@@ -44,10 +44,11 @@
       </section>
 
       <div class="submitbutton">
-        <a href="./cadastroOrg2.html">
-          <button class="botaoPrincipal" type="button">AVANÇAR</button>
-        </a>
+        
+          <button class="botaoPrincipal" type="submit">AVANÇAR</button>
+        
       </div>
+    </form>
     </main>
 
     <script>
