--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
@@ -22,6 +22,7 @@
         />
       </section>
 
+      <form action="./login.html">
       <section class="forms">
         <input type="text" placeholder="Nome da sua Organização" required/>
         <input type="text" placeholder="CEP" />
@@ -30,10 +31,11 @@
       </section>
   
       <div class="submitbutton">
-        <a href="./login.html">
-          <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
-        </a>
+       
+          <button class="botaoPrincipal" type="submit">CRIAR CONTA</button>
+       
       </div>
+    </form>
     </main>
 
     <script></script>
