--- a/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Para você</title>
     <link rel="stylesheet" href="../assets/searchstyle.css" />
+    <link
+    rel="icon"
+    href="../images/Athlete_Connect Icon.png"
+    type="image/x-icon"
+  />
   </head>
   <body>
     <main>
