--- a/Athlete_Connect/02 - chat/chatPv.html
+++ b/Athlete_Connect/02 - chat/chatPv.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Verde</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="icon"
+    href="../images/Athlete_Connect Icon.png"
+    type="image/x-icon"
+  />
 </head>
 <body>
   <header>
