--- a/Athlete_Connect/01 - telas principais/02 - search/perfis.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/perfis.html
@@ -15,12 +15,14 @@
     <main>
       <header class="header">
         <div class="logo">
+          <a href="../01 - para voce/paraVoce.html">
           <img
             class="boneco"
             src="https://i.ibb.co/g9rGQxK/boneco.png"
             alt="boneco"
             border="0"
           />
+        </a>
           <span>Athlete Connect</span>
         </div>
         <div class="tabs">
