--- a/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
@@ -14,8 +14,8 @@
   <body>
     <main>
       <header class="header">
-        <a class="logo">
-          <a href="../01 - para voce/paraVoce.html"></a>
+        <div class="logo">
+          <a href="../01 - para voce/paraVoce.html">
           <img
             class="boneco"
             src="https://i.ibb.co/g9rGQxK/boneco.png"
