--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <main>
@@ -36,7 +36,12 @@
             alt="esportista"
             border="0"
           />
-          <button type="button" onclick="window.location.href='../01 - login/cadastroAtleta.html'">AVANÇAR</button>
+          <button
+            type="button"
+            onclick="window.location.href='../01 - login/cadastroAtleta.html'"
+          >
+            AVANÇAR
+          </button>
           <p>Seja apoiado como atleta</p>
         </div>
         <div class="opcao">
@@ -45,7 +50,12 @@
             alt="doador"
             border="0"
           />
-          <button type="button" onclick="window.location.href='../01 - login/cadastroCarreira.html'">AVANÇAR</button>
+          <button
+            type="button"
+            onclick="window.location.href='../01 - login/cadastroCarreira.html'"
+          >
+            AVANÇAR
+          </button>
           <p>Doador / Organizações</p>
         </div>
       </section>
