--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor.html
@@ -6,10 +6,10 @@
     <title>Login_Investidor</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
     <style>
       .botaoPrincipal {
         margin-top: 0;
@@ -31,26 +31,23 @@
         <h1>Bem vindo,</h1>
         <h1 class="titleGreen">Investidor</h1>
       </section>
-<form action="./cadastroInvestidor2.html">
-      <section class="forms">
-        <input type="text" placeholder="CPF/CNPJ" required/>
-        <input type="email" placeholder="Email" required/>
-        <input type="password" placeholder="Senha" required/>
-      </section>
+      <form action="./cadastroInvestidor2.html">
+        <section class="forms">
+          <input type="text" placeholder="CPF/CNPJ" required />
+          <input type="email" placeholder="Email" required />
+          <input type="password" placeholder="Senha" required />
+        </section>
 
-      <section class="loginpage">
-        <p>Já possui Conta? <a href="./login.html">Faça Login!</a></p>
-      </section>
+        <section class="loginpage">
+          <p>Já possui Conta? <a href="./login.html">Faça Login!</a></p>
+        </section>
 
-      <div class="submitbutton">
-        
+        <div class="submitbutton">
           <button class="botaoPrincipal" type="submit">AVANÇAR</button>
-        
-      </div>
-    </form>
+        </div>
+      </form>
     </main>
 
-    <script>
-    </script>
+    <script></script>
   </body>
 </html>
