--- a/Athlete_Connect/00 - cadastro_login/01 - login/login.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <main>
@@ -22,35 +22,31 @@
         />
         <h1>Login</h1>
       </section>
-<form action="../../01 - telas principais/01 - para voce/paraVoce.html">
-      <section class="forms">
-        <input type="text" placeholder="CPF/CNPJ" required/>
-        <input type="password" placeholder="Senha" required/>
-      </section>
-   
+      <form action="../../01 - telas principais/01 - para voce/paraVoce.html">
+        <section class="forms">
+          <input type="text" placeholder="CPF/CNPJ" required />
+          <input type="password" placeholder="Senha" required />
+        </section>
 
-      <section class="loginpage">
-        <p>Esqueceu a senha?</p>
-        <a href="#">Redefinir senha!</a>
-      </section>
+        <section class="loginpage">
+          <p>Esqueceu a senha?</p>
+          <a href="#">Redefinir senha!</a>
+        </section>
 
-      <div class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <h4>Redefinir senha</h4>
-          <p>informe o CPF/CNPJ para qual deseja redefinir sua senha</p>
-          <input type="text" placeholder="CPF/CNPJ" />
-          <button class="botaoPrincipal" type="button">CONFIRMAR</button>
+        <div class="modal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h4>Redefinir senha</h4>
+            <p>informe o CPF/CNPJ para qual deseja redefinir sua senha</p>
+            <input type="text" placeholder="CPF/CNPJ" />
+            <button class="botaoPrincipal" type="button">CONFIRMAR</button>
+          </div>
         </div>
-      </div>
 
-      <div class="submitbutton">
-        
+        <div class="submitbutton">
           <button class="botaoPrincipal" type="submit">AVANÇAR</button>
-
-      </div>
-      
-    </form>
+        </div>
+      </form>
 
       <section class="loginpage">
         <p>Não possui uma conta?</p>
@@ -58,6 +54,6 @@
       </section>
     </main>
 
-    <script ></script>
+    <script></script>
   </body>
 </html>
