--- a/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
@@ -6,23 +6,23 @@
     <title>Para você</title>
     <link rel="stylesheet" href="../assets/searchstyle.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <main>
       <header class="header">
         <div class="logo">
           <a href="../01 - para voce/paraVoce.html">
-          <img
-            class="boneco"
-            src="https://i.ibb.co/g9rGQxK/boneco.png"
-            alt="boneco"
-            border="0"
-          />
-        </a>
+            <img
+              class="boneco"
+              src="https://i.ibb.co/g9rGQxK/boneco.png"
+              alt="boneco"
+              border="0"
+            />
+          </a>
           <span>Athlete Connect</span>
         </div>
         <div class="tabs">
@@ -82,17 +82,23 @@
       <!-- navbar inferior -->
 
       <div class="bottom-nav">
-        <a href="../../01 - telas principais/01 - para voce/paraVoce.html" class="nav-item">
+        <a
+          href="../../01 - telas principais/01 - para voce/paraVoce.html"
+          class="nav-item"
+        >
           <img
-            src="https://i.ibb.co/4pT63Cm/home-Verde.png"
-            alt="homeVerde"
+            src="../../images/homeCinza.svg"
+            alt="homeCinza"
             border="0"
           />
         </a>
-        <a href="../../01 - telas principais/02 - search/perfis.html" class="nav-item">
+        <a
+          href="../../01 - telas principais/02 - search/perfis.html"
+          class="nav-item"
+        >
           <img
-            src="https://i.ibb.co/3k6pWKF/search.png"
-            alt="search"
+            src="../../images/lupaVerde.svg"
+            alt="searchGreen"
             border="0"
           />
         </a>
@@ -105,6 +111,6 @@
       </div>
     </main>
 
-    <script src="../assets/index.js"></script>
+    <script></script>
   </body>
 </html>
