--- a/Athlete_Connect/04 - perfil/perfil.html
+++ b/Athlete_Connect/04 - perfil/perfil.html
@@ -6,10 +6,10 @@
     <title>Perfil(Atleta)</title>
     <link rel="stylesheet" href="style.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
   </head>
 
   <body>
@@ -294,15 +294,20 @@
       </section>
       <!-- navbar inferior -->
       <div class="bottom-nav">
-       
-        <a href="../01 - telas principais/01 - para voce/paraVoce.html" class="nav-item">
+        <a
+          href="../01 - telas principais/01 - para voce/paraVoce.html"
+          class="nav-item"
+        >
           <img
-            src="https://i.ibb.co/4pT63Cm/home-Verde.png"
-            alt="homeVerde"
+            src="../images/homeCinza.svg"
+            alt="homeCinza"
             border="0"
           />
         </a>
-        <a href="../01 - telas principais/02 - search/perfis.html" class="nav-item">
+        <a
+          href="../01 - telas principais/02 - search/perfis.html"
+          class="nav-item"
+        >
           <img
             src="https://i.ibb.co/3k6pWKF/search.png"
             alt="search"
@@ -313,7 +318,7 @@
           <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
         </a>
         <a href="./perfil.html" class="nav-item">
-          <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
+          <img src="../images/perfilVerde.svg" alt="userVerde" border="0" />
         </a>
       </div>
     </main>
