--- a/Athlete_Connect/05 - doacoes/doacaoRealizada.html
+++ b/Athlete_Connect/05 - doacoes/doacaoRealizada.html
@@ -9,7 +9,7 @@
       href="../images/Athlete_Connect Icon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a href="../01 - telas principais/01 - para voce/paraVoce.html">
@@ -17,7 +17,6 @@
         <img src="../images/BackSymbol.svg" alt="" />
       </div>
     </a>
-
     <div class="logo">
       <img src="../images/Athlete_Connect Icon.png" alt="" />
     </div>
@@ -25,7 +24,7 @@
     <div class="check">
       <img src="../images/CheckCircle.png" alt="" />
     </div>
-    <div style="text-align: center;">
+    <div style="text-align: center">
       <h1>Doação Realizada!</h1>
     </div>
   </body>
