--- a/Athlete_Connect/07 - FAQ/FAQ.html
+++ b/Athlete_Connect/07 - FAQ/FAQ.html
@@ -114,7 +114,8 @@
           class="accordion-collapse collapse"
         >
           <div class="accordion-body">
-            Basta marcar a opção de 'Doação Anônima' dentro da tela de 'Realizar Doações'.
+            Basta marcar a opção de 'Doação Anônima' dentro da tela de 'Realizar
+            Doações'.
           </div>
         </div>
       </div>
@@ -135,7 +136,11 @@
           id="panelsStayOpen-collapseThree"
           class="accordion-collapse collapse"
         >
-          <div class="accordion-body">Ela funciona a partir de uma certificação na secretaria do esporte. Assim, atleta é considerado profissional se possuir o seu respectivo registro.</div>
+          <div class="accordion-body">
+            Ela funciona a partir de uma certificação na secretaria do esporte.
+            Assim, atleta é considerado profissional se possuir o seu respectivo
+            registro.
+          </div>
         </div>
       </div>
     </div>
