--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login_Atleta</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
     <style>
       .botaoPrincipal {
         margin-top: 0;
@@ -31,27 +31,23 @@
         <h1>Bem vindo,</h1>
         <h1 class="titleGreen">Atleta</h1>
       </section>
-      
-<form action="./login.html">
-      <section class="forms">
-        <input type="text" placeholder="CPF/CNPJ" required/>
-        <input type="email" placeholder="Email" required/>
-        <input type="password" placeholder="Senha" required/>
-        <input  type="text" placeholder="Telefone" required/>
-        <input  type="text" placeholder="Informe seu esporte" required/>
 
-      </section>
-   
+      <form action="./login.html">
+        <section class="forms">
+          <input type="text" placeholder="CPF/CNPJ" required />
+          <input type="email" placeholder="Email" required />
+          <input type="password" placeholder="Senha" required />
+          <input type="text" placeholder="Telefone" required />
+          <input type="text" placeholder="Informe seu esporte" required />
+        </section>
 
-      <section class="loginpage">
-        <p>Já possui Conta?
-        <a href="./login.html">Faça Login!</a></p>
-      </section>
+        <section class="loginpage">
+          <p>Já possui Conta? <a href="./login.html">Faça Login!</a></p>
+        </section>
 
-      <div class="submitbutton">
+        <div class="submitbutton">
           <button class="botaoPrincipal" type="submit">CRIAR CONTA</button>
-          
-    </div>
+        </div>
       </form>
     </main>
 
