--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login_Investidor</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <main>
@@ -21,26 +21,21 @@
           border="0"
         />
       </section>
-<form action="./login.html">
-      <section class="forms">
-        <input type="text" placeholder="Nome Completo" required/>
-        <input type="text" placeholder="CEP" required/>
-        <input type="text" placeholder="Numero de Telefone" required/>
+      <form action="./login.html">
+        <section class="forms">
+          <input type="text" placeholder="Nome Completo" required />
+          <input type="text" placeholder="CEP" required />
+          <input type="text" placeholder="Numero de Telefone" required />
+        </section>
 
-      </section>
-   
+        <section class="loginpage">
+          <p>Já possui Conta? <a href="./login.html">Faça Login!</a></p>
+        </section>
 
-      <section class="loginpage">
-        <p>Já possui Conta?
-        <a href="./login.html">Faça Login!</a></p>
-      </section>
-
-      <div class="submitbutton">
-        
+        <div class="submitbutton">
           <button class="botaoPrincipal" type="submit">CRIAR CONTA</button>
-        
-      </div>
-    </form>
+        </div>
+      </form>
     </main>
 
     <script></script>
