--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login_Organizacao</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <main>
@@ -23,19 +23,16 @@
       </section>
 
       <form action="./login.html">
-      <section class="forms">
-        <input type="text" placeholder="Nome da sua Organização" required/>
-        <input type="text" placeholder="CEP" />
-        <input  type="text" placeholder="Ramo" required/>
+        <section class="forms">
+          <input type="text" placeholder="Nome da sua Organização" required />
+          <input type="text" placeholder="CEP" />
+          <input type="text" placeholder="Ramo" required />
+        </section>
 
-      </section>
-  
-      <div class="submitbutton">
-       
+        <div class="submitbutton">
           <button class="botaoPrincipal" type="submit">CRIAR CONTA</button>
-       
-      </div>
-    </form>
+        </div>
+      </form>
     </main>
 
     <script></script>
