--- a/Athlete_Connect/04 - perfil/compartilharPerfil.html
+++ b/Athlete_Connect/04 - perfil/compartilharPerfil.html
@@ -9,7 +9,7 @@
       href="../images/Athlete_Connect Icon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a href="../01 - telas principais/00 - favoritos/index.html">
@@ -17,10 +17,10 @@
         <img src="../images/BackSymbol.svg" alt="Voltar para a Home" />
       </div>
     </a>
-  <div class="search ">
-    <h1>Compartilhe seu</h1>
-  <h1 style="color:#03af50 ;">perfil</h1>
-    <img src="../images/QR Code.png" alt="QR code de perfil" />
-  </div>
+    <div class="search">
+      <h1>Compartilhe seu</h1>
+      <h1 style="color: #03af50">perfil</h1>
+      <img src="../images/QR Code.png" alt="QR code de perfil" />
+    </div>
   </body>
 </html>
