--- a/Athlete_Connect/06 - CONFIG/configuracao.html
+++ b/Athlete_Connect/06 - CONFIG/configuracao.html
@@ -1,124 +1,137 @@
 <!DOCTYPE html>
 <html lang="pt">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Configurações de Perfil</title>
+    <link
+      rel="icon"
+      href="../images/Athlete_Connect Icon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="config.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Configurações de Perfil</title>
-  <link rel="icon" href="../images/Athlete_Connect Icon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="config.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Configurações de Perfil</title>
+    <link
+      rel="icon"
+      href="https://media.discordapp.net/attachments/1280940186003574800/1280969091611496550/707abe9e-50a7-45e3-b07a-ccc26948cb22_0.png?ex=67291cee&is=6727cb6e&hm=34fd353a5734acd8029437f681ca9020b9cac23dfcc623a74a1acb7b74a6e41f&=&format=webp&quality=lossless&width=676&height=676"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="config.css" />
+  </head>
 
-  <title>Configurações de Perfil</title>
-  <link rel="icon"
-    href="https://media.discordapp.net/attachments/1280940186003574800/1280969091611496550/707abe9e-50a7-45e3-b07a-ccc26948cb22_0.png?ex=67291cee&is=6727cb6e&hm=34fd353a5734acd8029437f681ca9020b9cac23dfcc623a74a1acb7b74a6e41f&=&format=webp&quality=lossless&width=676&height=676"
-    type="image/x-icon">
-  <link rel="stylesheet" href="config.css">
-</head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="seta-voltar">
+          <img src="assets/images/Vector (1).svg" alt="" />
+        </div>
 
-
-<body>
-  <div class="container">
-    <div class="header">
-
-      <div class="seta-voltar">
-        <img src="assets/images/Vector (1).svg" alt="">
+        <h1 class="texto-configurar">Configurações</h1>
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqVg_URh9Mvrm3NYaTlCUyiM7r382ohELc1g&s"
+          alt="icon-perfil"
+          class="icone-perfil"
+        />
       </div>
 
-      <h1 class="texto-configurar">Configurações</h1>
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqVg_URh9Mvrm3NYaTlCUyiM7r382ohELc1g&s"
-        alt="icon-perfil" class="icone-perfil">
-    </div>
-
-    <div class="seu-perfil">
-      <h2>Seu perfil</h2>
-      <img src="assets/images/Vector.svg" alt="">
-      <div class="qr-code">
-        <img src="assets/images/qr-code.svg" alt="qr-code">
+      <div class="seu-perfil">
+        <h2>Seu perfil</h2>
+        <img src="assets/images/Vector.svg" alt="" />
+        <div class="qr-code">
+          <img src="assets/images/qr-code.svg" alt="qr-code" />
+        </div>
       </div>
+
+      <ul class="lista-configuracoes">
+        <li class="campos-itens">
+          <div>
+            <img
+              src="assets/images/user.svg"
+              alt="iconamoon-comment"
+              class="icone-imagem-1"
+            />
+          </div>
+          <div class="subtexto">
+            <a href="#" class="green"><strong>Conta</strong></a>
+            <p>Privacidade, seguranca, Email, Validaçã..</p>
+          </div>
+        </li>
+
+        <li class="campos-itens">
+          <img src="assets/images/chat.svg" alt="" class="icone-imagem-1" />
+          <div class="subtexto">
+            <a href="#"><strong>Chats</strong></a>
+            <p>Histórico de chats</p>
+          </div>
+        </li>
+
+        <li class="campos-itens">
+          <img src="assets/images/money.svg" alt="" class="icone-imagem-1" />
+
+          <div class="subtexto">
+            <a href="#" class="green"><strong>Doações Enviadas</strong></a>
+            <p>Todas as doações enviadas</p>
+          </div>
+        </li>
+
+        <li class="campos-itens">
+          <img
+            src="assets/images/save-money.svg"
+            alt=""
+            class="icone-imagem-2"
+          />
+          <div class="subtexto">
+            <a href="#"><strong>Doações Recebidas</strong></a>
+            <p>Todas as doações recebidas</p>
+          </div>
+        </li>
+
+        <li class="campos-itens">
+          <img src="assets/images/faq.svg" alt="" class="icone-imagem-1" />
+          <div class="subtexto">
+            <a href="#"><strong>Central de Ajuda</strong></a>
+            <p>Central de atendimento e politicas de pri...</p>
+          </div>
+        </li>
+
+        <li class="campos-itens">
+          <img src="assets/images/close.svg" alt="" class="icone-imagem-1" />
+          <div class="subtexto">
+            <a href="#" class="close-app">Fechar Aplicativo</a>
+            <p>Finalizar execução e retornar da tela inicial.</p>
+          </div>
+        </li>
+      </ul>
     </div>
 
-
-
-    <ul class="lista-configuracoes">
-      <li class="campos-itens">
-        <div>
-          <img src="assets/images/user.svg" alt="iconamoon-comment" class="icone-imagem-1" />
-        </div>
-        <div class="subtexto">
-          <a href="#" class="green"><strong>Conta</strong></a>
-          <p>Privacidade, seguranca, Email, Validaçã.. </p>
-        </div>
-      </li>
-
-
-      <li class="campos-itens">
-        <img src="assets/images/chat.svg" alt="" class="icone-imagem-1">
-        <div class="subtexto">
-          <a href="#"><strong>Chats</strong></a>
-          <p>Histórico de chats</p>
-        </div>
-      </li>
-
-
-      <li class="campos-itens">
-        <img src="assets/images/money.svg" alt="" class="icone-imagem-1">
-
-        <div class="subtexto">
-          <a href="#" class="green"><strong>Doações Enviadas</strong></a>
-          <p>Todas as doações enviadas</p>
-        </div>
-      </li>
-
-
-      <li class="campos-itens">
-        <img src="assets/images/save-money.svg" alt="" class="icone-imagem-2">
-        <div class="subtexto">
-          <a href="#"><strong>Doações Recebidas</strong></a>
-          <p>Todas as doações recebidas</p>
-        </div>
-      </li>
-
-
-      <li class="campos-itens">
-        <img src="assets/images/faq.svg" alt="" class="icone-imagem-1">
-        <div class="subtexto">
-          <a href="#"><strong>Central de Ajuda</strong></a>
-          <p>Central de atendimento e politicas de pri...</p>
-        </div>
-      </li>
-
-
-      <li class="campos-itens">
-
-        <img src="assets/images/close.svg" alt="" class="icone-imagem-1">
-        <div class="subtexto">
-          <a href="#" class="close-app">Fechar Aplicativo</a>
-          <p>Finalizar execução e retornar da tela inicial. </p>
-        </div>
-      </li>
-    </ul>
-  </div>
-
-  <div class="bottom-nav">
-    <!-- criação de postagem -->
-    <a href="#" class="nav-item">
-      <img src="https://i.ibb.co/4pT63Cm/home-Verde.png" alt="homeVerde" border="0" />
-    </a>
-    <a href="#" class="nav-item">
-      <img src="https://i.ibb.co/3k6pWKF/search.png" alt="search" border="0" />
-    </a>
-    <a href="#" class="nav-item">
-      <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
-    </a>
-    <a href="#" class="nav-item">
-      <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
-    </a>
-  </div>
-</body>
-
+    <div class="bottom-nav">
+      <!-- criação de postagem -->
+      <a href="#" class="nav-item">
+        <img
+          src="https://i.ibb.co/4pT63Cm/home-Verde.png"
+          alt="homeVerde"
+          border="0"
+        />
+      </a>
+      <a href="#" class="nav-item">
+        <img
+          src="https://i.ibb.co/3k6pWKF/search.png"
+          alt="search"
+          border="0"
+        />
+      </a>
+      <a href="#" class="nav-item">
+        <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
+      </a>
+      <a href="#" class="nav-item">
+        <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
+      </a>
+    </div>
+  </body>
 </html>
