--- a/Athlete_Connect/04 - perfil/compartilharPerfil.html
+++ b/Athlete_Connect/04 - perfil/compartilharPerfil.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="../01 - telas principais/00 - favoritos/index.html">
+    <a href="../01 - telas principais/01 - para voce/paraVoce.html">
       <div>
         <img src="../images/BackSymbol.svg" alt="Voltar para a Home" />
       </div>
