--- a/Athlete_Connect/06 - CONFIG/configuracao.html
+++ b/Athlete_Connect/06 - CONFIG/configuracao.html
@@ -44,7 +44,9 @@
         <h2>Seu perfil</h2>
         <img src="assets/images/Vector.svg" alt="" />
         <div class="qr-code">
+          <a href="../04 - perfil/compartilharPerfil.html">
           <img src="assets/images/qr-code.svg" alt="qr-code" />
+        </a>
         </div>
       </div>
 
@@ -101,7 +103,9 @@
         </li>
 
         <li class="campos-itens">
+          <a href="../00 - cadastro_login/00 - welcome/index.html">
           <img src="assets/images/close.svg" alt="" class="icone-imagem-1" />
+        </a>
           <div class="subtexto">
             <a href="#" class="close-app">Fechar Aplicativo</a>
             <p>Finalizar execução e retornar da tela inicial.</p>
@@ -112,26 +116,32 @@
 
     <div class="bottom-nav">
       <!-- criação de postagem -->
-      <a href="#" class="nav-item">
-        <img
-          src="https://i.ibb.co/4pT63Cm/home-Verde.png"
-          alt="homeVerde"
-          border="0"
-        />
-      </a>
-      <a href="#" class="nav-item">
-        <img
-          src="https://i.ibb.co/3k6pWKF/search.png"
-          alt="search"
-          border="0"
-        />
-      </a>
-      <a href="#" class="nav-item">
-        <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
-      </a>
-      <a href="#" class="nav-item">
-        <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
-      </a>
+      <a
+          href="../01 - telas principais/01 - para voce/paraVoce.html"
+          class="nav-item"
+        >
+          <img
+            src="../images/homeCinza.svg"
+            alt="homeCinza"
+            border="0"
+          />
+        </a>
+        <a
+          href="../01 - telas principais/02 - search/perfis.html"
+          class="nav-item"
+        >
+          <img
+            src="https://i.ibb.co/3k6pWKF/search.png"
+            alt="search"
+            border="0"
+          />
+        </a>
+        <a href="../02 - chat/group.html" class="nav-item">
+          <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
+        </a>
+        <a href="./perfil.html" class="nav-item">
+          <img src="../images/perfilVerde.svg" alt="userVerde" border="0" />
+        </a>
     </div>
   </body>
 </html>
