build: seuPerfil, perfilVistoPorAtleta

--- a/Athlete_Connect/00 - cadastro_login/01 - login/login.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/login.html
@@ -33,20 +33,22 @@
           <a href="#">Redefinir senha!</a>
         </section>
 
-        <div class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <h4>Redefinir senha</h4>
-            <p>informe o CPF/CNPJ para qual deseja redefinir sua senha</p>
-            <input type="text" placeholder="CPF/CNPJ" />
-            <button class="botaoPrincipal" type="button">CONFIRMAR</button>
-          </div>
-        </div>
+        
 
         <div class="submitbutton">
           <button class="botaoPrincipal" type="submit">AVANÇAR</button>
         </div>
       </form>
+      
+      <div class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h4>Redefinir senha</h4>
+          <p>informe o CPF/CNPJ para qual deseja redefinir sua senha</p>
+          <input type="text" placeholder="CPF/CNPJ" />
+          <button class="botaoPrincipal" type="button">CONFIRMAR</button>
+        </div>
+      </div>
 
       <section class="loginpage">
         <p>Não possui uma conta?</p>
@@ -54,6 +56,6 @@
       </section>
     </main>
 
-    <script></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
