--- a/Athlete_Connect/01 - telas principais/01 - para voce/paraVoce.html
+++ b/Athlete_Connect/01 - telas principais/01 - para voce/paraVoce.html
@@ -167,7 +167,7 @@
           <div class="postagemcontent">
             <!-- Bloco de conteúdo da postagem -->
             <h4 class="nomePerfil">Brasileirao Série A</h4>
-            <p>Essa tebela pegando fogo!!!</p>
+            <p>Essa tabela pegando fogo!!!</p>
             <div class="iconsPostagem">
               <!-- botao de like -->
               <input type="checkbox" id="checkbox" />
@@ -576,7 +576,7 @@
         <a href="../../02 - chat/group.html" class="nav-item">
           <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
         </a>
-        <a href="../../04 - perfil/perfil.html" class="nav-item">
+        <a href="../../04 - perfil/seuperfil.html" class="nav-item">
           <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
         </a>
       </div>
