--- a/Athlete_Connect/01 - telas principais/02 - search/perfis.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/perfis.html
@@ -44,10 +44,10 @@
         </div>
         <div class="profileSearch">
           <img
-            src="https://conteudo.imguol.com.br/c/parceiros/62/2019/09/13/marta-silva-1568399217504_v2_450x450.jpg.webp"
+            src="../../images/Wellington Figueiredo.jpeg"
             alt="ninja"
           />
-          <a href="#" class="profileName">Marta</a>
+          <a href="../../04 - perfil/perfil.html" class="profileName">Wellington Figueiredo</a>
         </div>
         <div class="profileSearch">
           <img
@@ -99,7 +99,7 @@
         <a href="../../02 - chat/group.html" class="nav-item">
           <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
         </a>
-        <a href="../../04 - perfil/perfil.html" class="nav-item">
+        <a href="../../04 - perfil/seuperfil.html"  class="nav-item">
           <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
         </a>
       </div>
