--- a/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/treinamentos.html
@@ -105,7 +105,7 @@
         <a href="../../02 - chat/group.html" class="nav-item">
           <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
         </a>
-        <a href="../../04 - perfil/perfil.html" class="nav-item">
+        <a href="../../04 - perfil/seuperfil.html" class="nav-item">
           <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
         </a>
       </div>
