--- a/Athlete_Connect/04 - perfil/seuperfil.html
+++ b/Athlete_Connect/04 - perfil/seuperfil.html
@@ -47,9 +47,15 @@
           /></a>
         </div>
         <section class="botoes">
+          <a href="../06 - CONFIG/configuracao.html">
           <button class="botao-seguir">Editar</button>
+          </a>
+          <a href="../05 - doacoes/rankingDoacoes.html">
           <button class="botao-mensagem">Apoiadores</button>
-          <button class="botao-compartilhar">Compartilhar</button>
+          </a>
+          <a href="../04 - perfil/compartilharPerfil.html">
+            <button class="botao-compartilhar">Compartilhar</button>
+          </a>
         </section>
       </header>
 
