--- a/Athlete_Connect/05 - doacoes/rankingDoacoes.html
+++ b/Athlete_Connect/05 - doacoes/rankingDoacoes.html
@@ -74,7 +74,9 @@
       </div>
 
       <div class="back-arrow">
+        <a href="../01 - telas principais/01 - para voce/paraVoce.html">
         <img src="imagens/ic_round-arrow-back-ios.png" alt="seta" />
+      </a>
       </div>
     </div>
   </body>
