--- a/Athlete_Connect/04 - perfil/compartilharPerfil.html
+++ b/Athlete_Connect/04 - perfil/compartilharPerfil.html
@@ -9,7 +9,7 @@
       href="../images/Athlete_Connect Icon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
     <a href="../01 - telas principais/01 - para voce/paraVoce.html">
