--- a/Athlete_Connect/07 - FAQ/FAQ.html
+++ b/Athlete_Connect/07 - FAQ/FAQ.html
@@ -31,8 +31,9 @@
   <style></style>
   <body>
     <div>
+      <a href="../06 - CONFIG/configuracao.html">
       <img src="../images/BackSymbol.svg" alt="" />
-
+    </a>
       <h1>FAQ</h1>
     </div>
 
