--- a/Athlete_Connect/05 - doacoes/doacoesEnviadas.html
+++ b/Athlete_Connect/05 - doacoes/doacoesEnviadas.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../images/Athlete_Connect Icon.png" type="image/x-icon">
   <link rel="stylesheet" href="stylesrecebidas.css">
-  <title>Doações Recebidas</title>
+  <title>Doações Enviadas</title>
 </head>
 <body>
   <div class="container">
-    <h1>Doações Recebidas</h1>
+    <h1>Doações Enviadas</h1>
     <div class="months">
       <div class="month">JAN</div>
       <div class="month">FEV</div>
@@ -20,50 +20,50 @@
     <div class="donation-list">
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Sandro Dias</p>
-          <p class="date">Ter 12.05.2024</p>
+          <p class="donor">Mauro Costa</p>
+          <p class="date">Ter 13.05.2024</p>
         </div>
-        <p class="amount">R$29.90</p>
+        <p class="amount">R$16.90</p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Doação Anônima</p>
-          <p class="date">Seg 11.05.2024</p>
+          <p class="donor">Elmo Ferreira</p>
+          <p class="date">Seg 15.05.2024</p>
         </div>
-        <p class="amount">R$9.50</p>
+        <p class="amount">R$90.50</p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Flávio Almeida</p>
-          <p class="date">Seg 11.05.2024</p>
+          <p class="donor">Arnaldo Oliveira</p>
+          <p class="date">Seg 23.05.2024</p>
         </div>
-        <p class="amount">R$19.30</p>
+        <p class="amount">R$10.30</p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Luiza Barreto</p>
-          <p class="date">Sab 09.05.2024</p>
+          <p class="donor">Carlos Afonso</p>
+          <p class="date">Sab 07.05.2024</p>
         </div>
-        <p class="amount">R$20.00</p>
+        <p class="amount">R$27.00</p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Doação Anônima</p>
+          <p class="donor">Aloísio Nunes</p>
           <p class="date">Sex 08.05.2024</p>
         </div>
-        <p class="amount">R$14.00</p>
+        <p class="amount">R$19.00</p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Doação Anônima</p>
-          <p class="date">Seg 11.03.2024</p>
+          <p class="donor">Júlia Paiva</p>
+          <p class="date">Seg 12.03.2024</p>
         </div>
-        <p class="amount">R$8.99</p>
+        <p class="amount">R$80.99</p>
       </div>
     </div>
   </div>
   <div class="bottom-nav">
-    </button>
+       </button>
     <a href="../01 - telas principais/01 - para voce/paraVoce.html" class="nav-item">
       <img
         src="../images/homeCinza.svg"
