--- a/Athlete_Connect/06 - CONFIG/configuracao.html
+++ b/Athlete_Connect/06 - CONFIG/configuracao.html
@@ -53,6 +53,7 @@
       <ul class="lista-configuracoes">
         <li class="campos-itens">
           <div>
+            <a href="../04 - perfil/seuperfil.html" class="green">
             <img
               src="assets/images/user.svg"
               alt="iconamoon-comment"
@@ -60,54 +61,59 @@
             />
           </div>
           <div class="subtexto">
-            <a href="#" class="green"><strong>Conta</strong></a>
+            <strong>Conta</strong></a>
             <p>Privacidade, seguranca, Email, Validaçã..</p>
           </div>
         </li>
 
         <li class="campos-itens">
+          <a href="../02 - chat/group.html" class="green">
           <img src="assets/images/chat.svg" alt="" class="icone-imagem-1" />
           <div class="subtexto">
-            <a href="#"><strong>Chats</strong></a>
+            <strong>Chats</strong></a>
             <p>Histórico de chats</p>
           </div>
         </li>
 
         <li class="campos-itens">
+          <a href="../05 - doacoes/doacoesEnviadas.html" class="green">
           <img src="assets/images/money.svg" alt="" class="icone-imagem-1" />
 
           <div class="subtexto">
-            <a href="#" class="green"><strong>Doações Enviadas</strong></a>
+            <strong>Doações Enviadas</strong></a>
             <p>Todas as doações enviadas</p>
           </div>
         </li>
 
         <li class="campos-itens">
+          <a href="../05 - doacoes/doacaoesRecebidas.html" class="green">
           <img
             src="assets/images/save-money.svg"
             alt=""
             class="icone-imagem-2"
           />
           <div class="subtexto">
-            <a href="#"><strong>Doações Recebidas</strong></a>
+            <strong>Doações Recebidas</strong>
+          </a>
             <p>Todas as doações recebidas</p>
           </div>
         </li>
 
         <li class="campos-itens">
+          <a href="../07 - FAQ/FAQ.html" class="green">
           <img src="assets/images/faq.svg" alt="" class="icone-imagem-1" />
+        
           <div class="subtexto">
-            <a href="#"><strong>Central de Ajuda</strong></a>
+            <strong>Central de Ajuda</strong></a>
             <p>Central de atendimento e politicas de pri...</p>
           </div>
         </li>
 
         <li class="campos-itens">
-          <a href="../00 - cadastro_login/00 - welcome/index.html">
+          <a href="../00 - cadastro_login/00 - welcome/index.html" class="close-app">
           <img src="assets/images/close.svg" alt="" class="icone-imagem-1" />
-        </a>
           <div class="subtexto">
-            <a href="#" class="close-app">Fechar Aplicativo</a>
+            Fechar Aplicativo</a>
             <p>Finalizar execução e retornar da tela inicial.</p>
           </div>
         </li>
