--- a/Athlete_Connect/05 - doacoes/doacoesEnvio.html
+++ b/Athlete_Connect/05 - doacoes/doacoesEnvio.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div>
-      <a href="../04 - perfil/index.html">
+      <a href="../04 - perfil/VistoPorInvestidor.html">
         <i style="font-size: 24px" class="fa">&#xf104;</i>
       </a>
     </div>
