--- a/Athlete_Connect/04 - perfil/VistoPorInvestidor.html
+++ b/Athlete_Connect/04 - perfil/VistoPorInvestidor.html
@@ -48,10 +48,10 @@
         </div>
         <section class="botoes">
           <button class="botao-seguir" style="width: 30%;">Seguir</button>
-          <a href="#">
+          <a href="../05 - doacoes/rankingDoacoes.html">
             <button class="botao-mensagem" style="width: 90%; ">Apoiadores</button>
           </a>
-          <a href="#">
+          <a href="../05 - doacoes/doacoesEnvio.html">
             <button class="botao-mensagem">Apoiar</button>
           </a>
           <a href="./compartilharPerfil.html">
