--- a/Athlete_Connect/06 - CONFIG/configuracao.html
+++ b/Athlete_Connect/06 - CONFIG/configuracao.html
@@ -29,7 +29,9 @@
     <div class="container">
       <div class="header">
         <div class="seta-voltar">
+          <a href="../04 - perfil/seuperfil.html">
           <img src="assets/images/Vector (1).svg" alt="" />
+        </a>
         </div>
 
         <h1 class="texto-configurar">Configurações</h1>
