--- a/Athlete_Connect/04 - perfil/VistoPorInvestidor.html
+++ b/Athlete_Connect/04 - perfil/VistoPorInvestidor.html
@@ -42,7 +42,7 @@
             <h1>Anderson Ferreira</h1>
             <p class="biografia">Facebook: @AndersonFerreira</p>
           </div>
-          <a href=""
+          <a href="../04 - perfil/estatisticas.html"
             ><img src="../images/estatisticas.svg" alt="estatisticas"
           /></a>
         </div>
