--- a/Athlete_Connect/04 - perfil/estatisticas.html
+++ b/Athlete_Connect/04 - perfil/estatisticas.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estatísticas</title>
-    <link rel="stylesheet" href="st">
+    <link rel="stylesheet" href="../04 - perfil/styles.css">
 </head>
 <body>
     <div  class="header">
+        <a href="../01 - telas principais/01 - para voce/paraVoce.html">
+        <img src="../images/ic_round-arrow-back-ios.png" alt="seta">
+    </a>
         <h1>Estatísticas</h1>
-        <img src="imagens/ic_round-arrow-back-ios.png" alt="seta">
     </div>
     <div class="stats">
-        <img src="imagens/estatisticas.png" alt="stats">
+        <img src="../images/estatisticas.png" alt="stats">
     </div>
     <div class="cardio">
-        <img src="imagens/batimentos.png" alt="cardio">
+        <img src="../images/batimentos.png" alt="cardio">
     </div>
 </body>
 </html>
