--- a/Athlete_Connect/04 - perfil/perfilOrg.html
+++ b/Athlete_Connect/04 - perfil/perfilOrg.html
@@ -47,7 +47,7 @@
         <section class="botoes">
           <button class="botao-seguir" style="width: 40%;">Seguir</button>
           <a href="./compartilharPerfil.html">
-            <button class="botao-compartilhar " style="width: 100%;"">Compartilhar</button>
+            <button class="botao-compartilhar " style="width: 100%;">Compartilhar</button>
           </a>
         </section>
       </header>
