--- a/Athlete_Connect/04 - perfil/seuperfil.html
+++ b/Athlete_Connect/04 - perfil/seuperfil.html
@@ -40,7 +40,7 @@
             <h1>Wellington Figueiredo</h1>
             <p class="biografia">Instagram: @WellBodybuilder</p>
           </div>
-          <a href=""
+          <a href="../04 - perfil/estatisticas.html"
             ><img src="../images/estatisticas.svg" alt="estatisticas"
           /></a>
         </div>
