--- a/Athlete_Connect/04 - perfil/perfil.html
+++ b/Athlete_Connect/04 - perfil/perfil.html
@@ -40,13 +40,13 @@
             <h1>Wellington Figueiredo</h1>
             <p class="biografia">Instagram: @WellBodybuilder</p>
           </div>
-          <a href=""
+          <a href="../04 - perfil/estatisticas.html"
             ><img src="../images/estatisticas.svg" alt="estatisticas"
           /></a>
         </div>
         <section class="botoes">
           <button class="botao-seguir">Seguir</button>
-          <a href="#">
+          <a href="../05 - doacoes/rankingDoacoes.html">
             <button class="botao-mensagem">Apoiadores</button>
           </a>
           <a href="./compartilharPerfil.html">
