--- a/Athlete_Connect/05 - doacoes/doacoesEnviadas.html
+++ b/Athlete_Connect/05 - doacoes/doacoesEnviadas.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <div class="container">
+    <a href="../01 - telas principais/01 - para voce/paraVoce.html">
+        <img src="imagens/ic_round-arrow-back-ios.png" alt="seta" />
+      </a>
     <h1>Doações Enviadas</h1>
     <div class="months">
       <div class="month">JAN</div>
