refactor: chat page

--- a/Athlete_Connect/02 - chat/chatPv.html
+++ b/Athlete_Connect/02 - chat/chatPv.html
@@ -54,9 +54,9 @@
           onclick="document.getElementById('msgImg').click()"
           class="botao-anexar"
         >
-          📎
+          <img src="../images/add.svg" alt="" style="margin-top: 3px;">
         </button>
-        <button onclick="chatOperation()" class="botao-enviar">Enviar</button>
+        <button onclick="chatOperation()" class="botao-enviar"><img src="https://cdn-icons-png.flaticon.com/512/318/318476.png" alt=""></button>
       </div>
     </section>
 
